<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/treatment_header"/>

    <TextView
        android:id="@+id/textView_4hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:text="@string/addison_4hour" />

    <TextView
        android:id="@+id/countdownTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="16dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="04:00:00"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_8hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/addison_8hour" />

    <TextView
        android:id="@+id/countdownTextView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="16dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="08:00:00"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/wake_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/wake_text" />

</LinearLayout>